--- a/mock-provider/src/main/resources/application.yml
+++ b/mock-provider/src/main/resources/application.yml
@@ -1,13 +1,20 @@
-﻿server:
+server:
   port: 8081
 
 spring:
   application:
     name: finra-mock-provider
 
-fix:
-  generation:
-    rate: 5000
-    symbols: [AAPL, TSLA, GOOGL, MSFT, AMZN]
-    firm-id: FINRA_BROKER_123
-    venue: XNAS
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,metrics
+  endpoint:
+    health:
+      show-details: always
+
+logging:
+  level:
+    root: INFO
+    com.mockfix: DEBUG
